# wgsparkl

./: .gitignore  Cargo.toml  LICENSE  README.md  build_wasm.sh  notes.thierry.md
.github/workflows/: ci.yaml
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/text_to_collider/: Cargo.toml
crates/text_to_collider/examples/: color_positions.rs  display.rs
crates/text_to_collider/src/: lib.rs
crates/wgsparkl-testbed2d/: Cargo.toml
crates/wgsparkl-testbed3d/: Cargo.toml
crates/wgsparkl2d/: Cargo.toml
crates/wgsparkl2d/examples/: elastic_cut2.rs  elasticity2.rs  sand2.rs  testbed2.rs
crates/wgsparkl3d/: Cargo.toml
crates/wgsparkl3d/assets/: Car 3D Model.glb  banana.glb  credits.txt
crates/wgsparkl3d/examples/: banana.rs  banana3.rs  elastic_cut3.rs  elasticity3.rs  glb_to_point_cloud_color.rs  heightfield3.rs  model_to_point_cloud.rs  model_to_point_cloud_color.rs  obj_to_point_cloud.rs  sand3.rs  taichi_elastic_cut.rs  testbed3.rs
crates/wgsparkl3d/examples/libs/: extract_mesh.rs  glb_to_point_cloud.rs
dist2d/: index.html
dist3d/: index.html
examples2d/: Cargo.toml
examples2d/src/: elastic_cut2.rs  elasticity2.rs  main.rs  sand2.rs
examples3d/: Cargo.toml
examples3d/assets/: chefs_knife_modified.glb  chefs_knife_open_blade.glb
examples3d/examples/: glb_to_point_cloud.rs
examples3d/src/: banana3.rs  elastic_cut3.rs  glb_to_point_cloud_color.rs  heightfield3.rs  main.rs  obj_to_point_cloud.rs  sand3.rs
examples3d/src/utils/: default_scene.rs  extract_mesh.rs  glb_to_point_cloud.rs  mod.rs
src/: lib.rs  pipeline.rs
src/collision/: collide.rs  collide.wgsl  mod.rs
src/grid/: grid.rs  grid.wgsl  kernel.rs  kernel.wgsl  mod.rs  prefix_sum.rs  prefix_sum.wgsl  sort.rs  sort.wgsl  touch_particle_blocks2d.wgsl  touch_particle_blocks3d.wgsl
src/load_mesh3d/: load_bevy.rs  load_gltf.rs  load_obj.rs  mod.rs
src/models/: drucker_prager.rs  drucker_prager.wgsl  linear_elasticity.rs  linear_elasticity.wgsl  mod.rs  neo_hookean_elasticity.rs  neo_hookean_elasticity.wgsl
src/solver/: g2p.rs  g2p.wgsl  g2p_cdf.rs  g2p_cdf.wgsl  grid_update.rs  grid_update.wgsl  grid_update_cdf.rs  grid_update_cdf.wgsl  mod.rs  p2g.rs  p2g.wgsl  p2g_cdf.rs  p2g_cdf.wgsl  params.rs  params.wgsl  particle2d.rs  particle2d.wgsl  particle3d.rs  particle3d.wgsl  particle_update.rs  particle_update.wgsl  rigid_impulses.rs  rigid_impulses.wgsl  rigid_particle_update.rs  rigid_particle_update.wgsl
src_testbed/: hot_reload.rs  instancing2d.rs  instancing2d.wgsl  instancing3d.rs  instancing3d.wgsl  lib.rs  prep_vertex_buffer.rs  prep_vertex_buffer2d.wgsl  prep_vertex_buffer3d.wgsl  rigid_graphics.rs  startup.rs  step.rs  ui.rs
