[package]
name = "wgsparkl-examples-3d"
version = "0.1.0"
license = "Apache-2.0 OR Custom"
edition = "2021"

[dependencies]
nalgebra = { version = "0.33", features = ["rand", "rkyv-serialize"] }
futures-test = "0.3"
serial_test = "3"
approx = "0.5"
async-std = { version = "1", features = ["attributes"] }
bevy = { version = "0.15.0", features = [
    "shader_format_glsl",
    "shader_format_spirv",
    "webgpu",
    "jpeg",
] }
wgsparkl_testbed3d = { path = "../crates/wgsparkl-testbed3d" }
wgsparkl3d = { path = "../crates/wgsparkl3d", features = [
    "load_gltf",
    "load_bevy",
    "load_obj",
] }
wgcore = "0.2"
futures = "0.3"
obj-rs = { version = "0.7", default-features = false }
bevy_editor_cam = "*"
image = "0.25"
gltf = { version = "1.3", features = ["KHR_materials_pbrSpecularGlossiness"] }
rapier3d = "0.23"
rkyv = "0.8"

[lints]
workspace = true
