[package]
name = "wgsparkl_testbed2d"
version = "0.1.0"
license = "Apache-2.0 OR Custom"
edition = "2021"

[lints]
workspace = true

[lib]
name = "wgsparkl_testbed2d"
path = "../../src_testbed/lib.rs"
required-features = ["dim2"]

[features]
dim2 = []
default_features = ["dim2"]

[dependencies]
nalgebra = { workspace = true, features = ["rand"] }
wgpu = { workspace = true }
naga_oil = { workspace = true }
bytemuck = { workspace = true }
async-channel = { workspace = true }

wgcore = { path = "../../../wgmath/crates/wgcore" }
wgebra = { path = "../../../wgmath/crates/wgebra" }
wgparry2d = { path = "../../../wgmath/crates/wgparry/crates/wgparry2d" }

futures-test = "0.3"
serial_test = "3"
approx = "0.5"
async-std = { version = "1", features = ["attributes"] }
bevy = { version = "0.15.0-dev", features = ["shader_format_glsl", "shader_format_spirv", "webgpu"], git = "https://github.com/bevyengine/bevy", rev = "9386bd0114c44c9f00a2e9c41db1225aaa78d159" }
bevy_wasm_window_resize = "0.4"
bevy_editor_cam = "0.3"
bevy_mod_picking = { version = "0.20", default-features = false }
bevy_egui = { version = "0.29", default-features = false, features = ["default_fonts", "render"] }
wgsparkl2d = { path = "../wgsparkl2d" }
