[package]
name = "wgsparkl_testbed2d"
version = "0.1.0"
license = "Apache-2.0 OR Custom"
edition = "2021"

[lints]
workspace = true

[lib]
name = "wgsparkl_testbed2d"
path = "../../src_testbed/lib.rs"
required-features = ["dim2"]

[features]
dim2 = []
default = ["dim2"]

[dependencies]
nalgebra = { workspace = true, features = ["rand"] }
wgpu = { workspace = true }
naga_oil = { workspace = true }
bytemuck = { workspace = true }
async-channel = { workspace = true }

wgcore = { version = "0.2", path = "../../../wgmath/crates/wgcore" }
wgebra = { version = "0.2", path = "../../../wgmath/crates/wgebra" }
wgparry2d = { version = "0.2", path = "../../../wgmath/crates/wgparry/crates/wgparry2d" }

futures-test = "0.3"
serial_test = "3"
approx = "0.5"
async-std = { version = "1", features = ["attributes"] }
bevy = { version = "0.15.0", features = [
    "shader_format_glsl",
    "shader_format_spirv",
    "webgpu",
] }
bevy_wasm_window_resize = { version = "0.5", git = "https://github.com/Leinnan/bevy_wasm_window_resize.git", rev = "d144fe33c0a52e1c18942487a9bc8ff99e7dab20" }
bevy_editor_cam = { version = "0.5", git = "https://github.com/bonsairobo/bevy_editor_cam.git", branch = "bevy-0.15" }
bevy_egui = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "render",
] }
wgsparkl2d = { path = "../wgsparkl2d" }
