[package]
name = "wgsparkl_testbed2d"
version = "0.1.0"
license = "Apache-2.0 OR Custom"
edition = "2021"

[lints]
workspace = true

[lib]
name = "wgsparkl_testbed2d"
path = "../../src_testbed/lib.rs"
required-features = ["dim2"]

[features]
dim2 = []
default = ["dim2"]

[dependencies]
nalgebra = { workspace = true, features = ["rand"] }
wgpu = { workspace = true }
naga_oil = { workspace = true }
bytemuck = { workspace = true }
async-channel = { workspace = true }

wgcore = "0.2"
wgebra = "0.2"
wgparry2d = "0.2"

futures-test = "0.3"
serial_test = "3"
approx = "0.5"
async-std = { version = "1", features = ["attributes"] }
bevy = { version = "0.15.0", features = [
    "shader_format_glsl",
    "shader_format_spirv",
    "webgpu",
] }
#bevy_wasm_window_resize = "0.4"
bevy_editor_cam = "0.5"
bevy_egui = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "render",
] }
bevy_sprite = "0.15"
wgsparkl2d = { path = "../wgsparkl2d" }
futures = "0.3"
