[package]
name = "wgsparkl2d"
version = "0.1.0"
license = "Apache-2.0 OR Custom"
edition = "2021"

[lints]
workspace = true

[lib]
name = "wgsparkl2d"
path = "../../src/lib.rs"
required-features = ["dim2"]

[features]
default = ["dim2"]
dim2 = []

[dependencies]
nalgebra = { workspace = true }
wgpu = { workspace = true }
naga_oil = { workspace = true }
bytemuck = { workspace = true }
encase = { workspace = true }

wgcore = "0.2"
wgebra = "0.2"
wgparry2d = "0.2"
wgrapier2d = "0.2"

# TODO: make rapier optional?
rapier2d = "0.23"

# For wasm?
getrandom = { version = "0.3.1", features = ["wasm_js"] }
uuid = { version = "1", features = ["js"] }

[dev-dependencies]
nalgebra = { version = "0.33", features = ["rand"] }
futures-test = "0.3"
serial_test = "3"
approx = "0.5"
async-std = { version = "1", features = ["attributes"] }
bevy = { version = "0.15.0", features = ["shader_format_glsl", "shader_format_spirv", "webgpu"] }
wgsparkl_testbed2d = { path = "../wgsparkl-testbed2d", features = ["dim2"] }
