[package]
name = "wgsparkl3d"
version = "0.1.0"
license = "Apache-2.0 OR Custom"
edition = "2021"

[lints]
workspace = true

[lib]
name = "wgsparkl3d"
path = "../../src/lib.rs"
required-features = ["dim3"]

[features]
default = ["dim3"]
dim3 = []

[dependencies]
nalgebra = { workspace = true }
wgpu = { workspace = true }
naga_oil = { workspace = true }
bytemuck = { workspace = true }
encase = { workspace = true }

serde = "1"
ron = "0.8.1"
wgcore = "0.2"
wgebra = "0.2"
wgparry3d = "0.2"
wgrapier3d = "0.2"

# TODO: make rapier optional?
rapier3d = "0.23"

[dev-dependencies]
nalgebra = { version = "0.33", features = ["rand"] }
futures-test = "0.3"
serial_test = "3"
approx = "0.5"
async-std = { version = "1", features = ["attributes"] }
bevy = { version = "0.15.0", features = [
    "shader_format_glsl",
    "shader_format_spirv",
    "webgpu",
] }
wgsparkl_testbed3d = { path = "../wgsparkl-testbed3d", features = ["dim3"] }
obj-rs = { version = "0.7", default-features = false }
bevy_editor_cam = "*"
