[package]
name = "wgsparkl3d"
version = "0.1.0"
license = "Apache-2.0 OR Custom"
edition = "2021"

[lints]
workspace = true

[lib]
name = "wgsparkl3d"
path = "../../src/lib.rs"
required-features = ["dim3"]

[features]
default = ["dim3"]
dim3 = []
load_gltf = ["obj-rs", "image"]
load_obj = ["gltf", "image"]
load_bevy = ["bevy", "image"]

[dependencies]
nalgebra = { workspace = true }
wgpu = { workspace = true }
naga_oil = { workspace = true }
bytemuck = { workspace = true }
encase = { workspace = true }

serde = "1"
ron = "0.8.1"
wgcore = "0.2"
wgebra = "0.2"
wgparry3d = "0.2"
wgrapier3d = "0.2"

# TODO: make rapier optional?
rapier3d = "0.23"

# for loaders
# TODO: slim bevy features
bevy = { version = "0.15.0", features = [
    "shader_format_glsl",
    "shader_format_spirv",
    "webgpu",
    "jpeg",
], optional = true }
gltf = { version = "1.3", features = [
    "KHR_materials_pbrSpecularGlossiness",
], optional = true }
obj-rs = { version = "0.7", default-features = false, optional = true }
image = { version = "0.25", optional = true }


[dev-dependencies]
futures-test = "0.3"
serial_test = "3"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
